--- a/src/styles/basics/_layout.scss
+++ b/src/styles/basics/_layout.scss
@@ -18,7 +18,7 @@
 
 .stay-layout {
     display: grid;
-    grid-template-columns: 80px 1fr 80px;
+    grid-template-columns: 20px 1fr 20px;
 
     .app-header {
         grid-column: 2;
@@ -39,5 +39,12 @@
 
     >* {
         grid-column: 2;
+    }
+}
+
+@media (min-width: 640px) {
+    .stay-layout {
+        display: grid;
+        grid-template-columns: 80px 1fr 80px;
     }
 }
