--- a/src/styles/cmps/_order-modal.scss
+++ b/src/styles/cmps/_order-modal.scss
@@ -1,8 +1,7 @@
 .order-modal {
     border: solid 1px $clr9;
     border-radius: 15px;
-    width: rem(550px);
-    // height: 80%;
+    width: rem(650px);
     position: fixed;
     top: 50%;
     left: 50%;
@@ -12,7 +11,7 @@
     padding: 20px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    // justify-content: space-between;
     background-color: $clr8;
 
     .modal-title {
@@ -48,6 +47,7 @@
             display: flex;
             flex-direction: column;
             gap:rem(5px);
+            margin-top: 20px;
         }
         .bold{
             font-weight: bold;
@@ -64,6 +64,7 @@
         padding-right: rem(25px);
         border-radius: $btnBorderRadius;
         align-self: flex-end;
+        margin-top: 40px;
     }
 
     .img-container {
