--- a/src/styles/cmps/_stay-filter-modal.scss
+++ b/src/styles/cmps/_stay-filter-modal.scss
@@ -1,8 +1,8 @@
 .stay-filter-modal {
     border: solid 1px $clr9;
     border-radius: 15px;
-    width: rem(780px);
-    height: rem(600px);
+    width: 90vw;
+    height: 80vh;
     position: fixed;
     top: 50%;
     left: 50%;
@@ -35,13 +35,13 @@
         border-bottom: solid 1px $clr9;
         flex: 1;
 
-       .title{
-           flex-basis: 200px;
-       }
+        .title {
+            flex-basis: 200px;
+        }
 
-       .close-btn{
-           margin-right: rem(300px)
-       }
+        .close-btn {
+            margin-right: rem(100px)
+        }
 
     }
 
@@ -57,7 +57,7 @@
         >* {
             padding: rem(20px) 0;
         }
-        
+
         >*:not(:last-child) {
             padding: rem(20px) 0;
             border-bottom: solid 1px $clr9;
@@ -72,7 +72,8 @@
 
         .property-type-labels {
             display: flex;
-            gap: rem(20px)
+            gap: rem(20px);
+            flex-wrap: wrap;
         }
 
         .property-type-btn {
@@ -81,7 +82,7 @@
             justify-content: space-between;
             gap: rem(10px);
             padding: rem(20px);
-            width: rem(170px);
+            width: rem(139px);
             height: rem(120px);
             border: solid 1px $clr9;
             border-radius: 15px;
@@ -113,6 +114,7 @@
                 display: flex;
                 flex-direction: column;
                 gap: 10px;
+                white-space: nowrap;
 
                 >* {
                     display: flex;
@@ -125,17 +127,17 @@
                 width: rem(23px);
                 height: rem(23px);
                 color: $clr9;
-               }
+            }
         }
 
         .price {
             input {
-                margin-inline-start: rem(35px);
+                margin-inline-start: unset;
                 margin-top: rem(45px);
                 -webkit-appearance: none;
                 background-color: $clr9;
                 height: 2px;
-                width: 90%;
+                width: 95%;
                 border: none;
             }
 
@@ -156,7 +158,7 @@
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
-                padding: rem(35px);
+                padding: 20px 0 20px 0;
 
                 .minmax {
                     width: rem(310px);
@@ -205,4 +207,44 @@
             color: $clr3;
         }
     }
+}
+
+@media (min-width: 640px) {
+    .stay-filter-modal {
+        width: rem(780px);
+        height: rem(600px);
+
+        .modal-title {
+
+            .close-btn {
+                margin-right: rem(300px)
+            }
+
+        }
+
+        .modal-details {
+
+            .property-type-labels {
+                flex-wrap: nowrap;
+            }
+
+            .property-type-btn {
+                width: rem(170px);
+            }
+
+            .price {
+
+                input {
+                    margin-inline-start: rem(35px);
+                    width: 90%;
+                }
+
+                .minmax-container {
+                    padding: rem(35px);
+                }
+            }
+        }
+    }
+
+
 }
