--- a/src/styles/cmps/_stay-filter.scss
+++ b/src/styles/cmps/_stay-filter.scss
@@ -9,7 +9,7 @@
     z-index: 50;
 
     .labels-container {
-        display: flex;
+        display: none;
         gap: rem(35px);
     }
 
@@ -80,7 +80,7 @@
         justify-content: center;
         gap: rem(8px);
 
-        &.selected{
+        &.selected {
             border: solid 2px $clr3;
 
         }
@@ -190,4 +190,23 @@
 
 .carousel.carousel-slider .control-arrow:hover {
     background: transparent;
+}
+
+
+@media (min-width: 640px) {
+    .stay-filter {
+        // display: flex;
+        // justify-content: space-between;
+        // align-items: center;
+        // height: rem(125px);
+        // background-color: $clr8;
+        // position: sticky;
+        // top: 80px;
+        // z-index: 50;
+
+        .labels-container {
+            display: flex;
+            // gap: rem(35px);
+        }
+    }
 }
