--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -49,6 +49,7 @@
 @import 'cmps/google-map';
 @import 'cmps/order-modal';
 @import 'cmps/add-review';
+@import 'cmps/details-mid-header';
 
  //HOST
  @import 'cmps/order-list.scss';
