--- a/src/styles/cmps/_app-header.scss
+++ b/src/styles/cmps/_app-header.scss
@@ -4,7 +4,7 @@
     align-items: center;
     border-bottom: 1px solid $clr5;
     background-color: transparent;
-    padding: 0 350px;
+    padding: 0 80px;
     height: 80px;
     position: block;
     width: 100%;
@@ -60,18 +60,16 @@
         border: 1px solid $clr6;
         background: $clr8;
 
-        &:hover {
-            box-shadow: 0 2px 4px rgb(0 0 0 / 18%);
+        svg {
+            stroke: black;
+            height: 35px;
+            width: 35px;
         }
 
-        img:nth-child(1) {
+        img {
             width: 16px;
             height: 16px;
-        }
-
-        img:nth-child(2) {
-            width: 30px;
-            height: 30px;
+            display: none;
         }
     }
 
@@ -86,9 +84,8 @@
     align-items: center;
     border-bottom: 1px solid $clr5;
     background-color: transparent;
-    padding: 0 80px;
+    padding: 0 20px;
     height: 80px;
-    // position: block;
     background-color: $clr8;
     position: sticky;
     top: 80px;
@@ -105,9 +102,9 @@
         justify-content: flex-end;
         white-space: nowrap;
 
-
         .main-nav {
             margin-inline-end: 10px;
+            display: none;
 
             a {
                 align-items: center;
@@ -119,9 +116,6 @@
                 font-size: rem(14px);
             }
 
-            a:hover {
-                background-color: $clr6-opacity
-            }
         }
     }
 
@@ -130,7 +124,6 @@
         font-size: rem(30px);
         font-weight: bold;
         font-family: DancingScript-Regular;
-        cursor: pointer;
     }
 
     .user-menu {
@@ -140,24 +133,19 @@
         justify-content: space-between;
         padding-inline-start: 15px;
         position: relative;
-        width: 80px;
-        border-radius: 25px;
-        border: 1px solid $clr6;
-        background: $clr8;
 
-        &:hover {
-            box-shadow: 0 2px 4px rgb(0 0 0 / 18%);
+        svg {
+            stroke: black;
+            height: 35px;
+            width: 35px;
         }
 
-        img:nth-child(1) {
+        img {
             width: 16px;
             height: 16px;
+            display: none;
         }
 
-        img:nth-child(2) {
-            width: 30px;
-            height: 30px;
-        }
     }
 
     .curr-user-img {
@@ -187,7 +175,6 @@
         justify-content: flex-end;
         white-space: nowrap;
         margin-bottom: 120px;
-
 
         .main-nav {
             margin-inline-end: 10px;
@@ -224,23 +211,17 @@
         justify-content: space-between;
         padding-inline-start: 15px;
         position: relative;
-        // width: 80px;
-        // border-radius: 25px;
-        // border: 1px solid $clr6;
-        // background: $clr8;
 
-        &:hover {
-            box-shadow: 0 2px 4px rgb(0 0 0 / 18%);
+        svg {
+            height: 35px;
+            width: 35px;
+            stroke: $clr7;
         }
 
-        img:nth-child(1) {
-            width: 16px;
-            height: 16px;
-        }
-
-        img:nth-child(2) {
+        img {
             width: 30px;
             height: 30px;
+            display: none;
         }
     }
 
@@ -332,6 +313,7 @@
     }
 }
 
+
 .scrolled {
 
     height: 80px;
@@ -341,14 +323,33 @@
 
     .logo {
         color: $clr1;
-        margin-bottom: 0
+        margin-bottom: 0;
+
+        svg {
+            stroke: inherit;
+        }
+
+    }
+
+    .user-menu {
+
+        svg {
+            stroke: $clr3;
+        }
     }
 
     .main-nav-container {
         margin-bottom: 0;
     }
+
+    svg {
+        stroke: $clr3;
+    }
+
 }
 
+
+//HOME-HEADER
 @media (min-width: 640px) {
 
     .home-header {
@@ -378,23 +379,133 @@
             border: 1px solid $clr6;
             background: $clr8;
 
+            svg {
+                height: 16px;
+                width: 16px;
+                stroke: $clr3;
+            }
+
             &:hover {
                 box-shadow: 0 2px 4px rgb(0 0 0 / 18%);
             }
 
-            img:nth-child(1) {
-                width: 16px;
-                height: 16px;
-            }
-
-            img:nth-child(2) {
-                width: 30px;
-                height: 30px;
+            img {
+                display: block;
             }
         }
     }
 
     .curr-user-img {
         display: block;
+    }
+
+    .home-header.scrolled {
+
+        .user-menu {
+
+            svg {
+                stroke: $clr3
+            }
+        }
+
+    }
+}
+
+
+//STAY-HEADER
+@media(min-width:640px) {
+    .stay-header {
+        padding: 0 80px;
+
+        .main-nav-container {
+
+            .main-nav {
+                display: flex;
+
+                a:hover {
+                    background-color: $clr6-opacity
+                }
+            }
+        }
+
+        .logo {
+            cursor: pointer;
+        }
+
+        .user-menu {
+            // align-items: center;
+            // display: flex;
+            // height: 40px;
+            // justify-content: space-between;
+            // padding-inline-start: 15px;
+            // position: relative;
+            width: 80px;
+            border-radius: 25px;
+            border: 1px solid $clr6;
+            background: $clr8;
+
+            svg {
+                height: 16px;
+                width: 16px;
+            }
+
+            &:hover {
+                box-shadow: 0 2px 4px rgb(0 0 0 / 18%);
+            }
+
+            img {
+                width: 30px;
+                height: 30px;
+                display: block;
+            }
+        }
+    }
+}
+
+//DETAILS-HEADER
+@media (min-width:640px) {
+    .details-header {
+
+        a:hover {
+            background-color: $clr6-opacity
+        }
+
+        .logo {
+            cursor: pointer;
+        }
+
+        .user-menu {
+            width: 80px;
+            border-radius: 25px;
+            border: 1px solid $clr6;
+            background: $clr8;
+
+            svg {
+                height: 16px;
+                width: 16px;
+            }
+
+            &:hover {
+                box-shadow: 0 2px 4px rgb(0 0 0 / 18%);
+            }
+
+            img {
+                width: 30px;
+                height: 30px;
+                display: block;
+            }
+        }
+    }
+}
+
+
+@media (min-width: 1500px) {
+    .details-header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        border-bottom: 1px solid $clr5;
+        background-color: transparent;
+        padding: 0 350px;
     }
 }
