added expand serach cmp

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -26,6 +26,7 @@
 @import 'cmps/user-menu-modal';
 @import 'cmps/user-msg';
 @import 'cmps/stay-search';
+@import 'cmps/stay-search-expand';
 
 //HOME
 @import 'cmps/top-rated-list';
